More work on bound resolution